# tauri-hello-world

src-tauri/: Cargo.toml
src-tauri/.cargo/: config.toml
